java: small fixes and modernize